# ssm-shell

./: .ecrc  .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goplicate.yaml  .markdownlint.base.jsonc  .markdownlint.json  .markdownlint.jsonc  .pre-commit-config.yaml  .woke.yml  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.md  SECURITY.md  __first_time.sh  __update.sh  cliff.toml  cmd_connect.go  cmd_version.go  ec2_instances.go  ecrc.toml  go.mod  go.sum  main.go  mkdocs.yml  prompt.go  pyproject.toml  requirements.txt  run_command.go  strings.go  trivy-license.yaml  trivy-vuln.yaml  versions.go  versions_test.go
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot-auto-merge.yml  dependency-review.yml  go-dep-submission.yml  golangci-lint.yml  govulncheck.yml  osv-scanner.yml  pr-dep-review.yml  scorecard.yml  scorecards.yml  trufflehog.yml  update-on-push.yml
aws/: ec2_instances.go  functions.go
cmd/: doc.go  root.go  version.go
scripts/: generate-contributors.sh
templates/: usage.gohtml
